# podcast-log

./: .bitbucket-pipelines.yml.swp  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  bitbucket-pipelines.yml  manage.py  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  settings.py  setup.py  tox.ini  urls.py  wsgi.py
.github/workflows/: ci.yml  pre-commit.yaml  test.yml
deploy_tools/: .env-deploy  fabfile.py  gunicorn_template.service  nginx_template
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts  episode.service.ts  episode.ts  mock-episodes.ts  mock-podcasts.ts  podcast.service.ts  podcast.ts  podcasts-api.service.spec.ts  podcasts-api.service.ts
frontend/src/app/episodes/: episodes.component.html  episodes.component.ts
frontend/src/app/podcast-detail/: podcast-detail.component.html  podcast-detail.component.ts
frontend/src/app/podcasts/: podcasts.component.html  podcasts.component.ts
frontend/src/app/statistics-table/: statistics-table.component.html  statistics-table.component.ts
frontend/src/styles/: bootstrap.min.css
migrations/: env.py
migrations/versions/: 6055c710d6f7_.py
podcast_log/: __init__.py  __version__.py  api.py  config.py  forms.py  models.py  pagination.py  routes.py  schemata.py  settings.py  tables.py  tasks.py  urls.py  views.py  wsgi.py
podcast_log/management/commands/: migrate_csv_db.py
src/: manage.py  settings.py  urls.py  wsgi.py
src/podcast_log/: admin.py  forms.py  models.py  settings.py  tables.py  tasks.py  urls.py  views.py
src/podcast_log/management/commands/: migrate_csv_db.py
src/podcast_log/migrations/: 0011_auto_20190118_0508.py  0012_auto_20190118_1412.py  0013_auto_20190118_1544.py  0014_auto_20190119_0344.py  0015_podcast_episode_number_pattern.py  0016_auto_20190122_0411.py  0017_auto_20190122_0412.py  0018_auto_20190122_0447.py  0019_auto_20190122_1831.py  0020_auto_20190125_0256.py  0021_auto_20190127_0337.py  0022_auto_20190128_2254.py  0023_auto_20190129_2013.py  0024_episode_needs_review.py
src/podcast_log/static/css/: style.css
src/podcast_log/templates/: add-podcast.html  base.html  edit-episode.html  edit-podcast.html  episode-list.html  episode_list.html  index.html  podcast-detail.html  podcast_detail.html  updating.html
src/podcast_log/templates/podcast_log/: index.html  podcast_detail.html
templates/: add-podcast.html  base.html  edit-episode.html  edit-podcast.html  episode-list.html  index.html  podcast-detail.html  statistics.html  upload-file.html
tests/: .test_models.py.swp  conftest.py  test_api.py  test_models.py  test_pagination.py  test_tasks.py
