[tool.poetry]
name = "podcast-log"
version = "0.2.1"
description = "Description"
authors = ["Matt Kramer <matthew.robert.kramer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^6.0.10"
flask = "^2.2.2"
flask-migrate = "^4.0.0"
flask-sqlalchemy = "^2.5.1"
flask-table = "^0.5.0"
flask-wtf = "^1.0.1"
gunicorn = "^20.0.0"
marshmallow = "=3.19.0"
psycopg2-binary = "^2.8"
python-dotenv = "^0.21.0"
sqlalchemy = "^1.4.48"
wtforms-sqlalchemy = "^0.3"

[tool.poetry.group.dev.dependencies]
fabric = "^2.4"
mypy = "^0.971"
patchwork = "^1.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
