[tool.poetry]
name = "podcast-log"
version = "0.2.1"
description = "Description"
authors = ["Matt Kramer <matthew.robert.kramer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"
flask = "^2.2.2"
flask-migrate = "^4.0.0"
flask-sqlalchemy = "^2.5.1"
flask-table = "^0.5.0"
flask-wtf = "^1.0.1"
gunicorn = "^20.0.0"
marshmallow = "=3.19.0"
psycopg2-binary = "^2.8"
python-dotenv = "^1.0.0"
sqlalchemy = "^1.4.48"
wtforms-sqlalchemy = "^0.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
types-invoke = "^2.0.0.8"

[tool.coverage.run]
source = [ "podcast_log" ]
omit = [ "podcast_log/wsgi.py" ]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
files = [ "podcast_log/**/*.py" ]
exclude = [ "deploy_tools/fabfile.py" ]

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_migrate.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_table.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flask_wtf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "marshmallow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "patchwork.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "_pytest.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wtforms.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wtforms_sqlalchemy.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
files = "tests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
